# rustatio

./: .clippy.toml  .dockerignore  .gitignore  .hadolint.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.docker.toml  Cargo.toml  Dockerfile  README.md  WEB_VERSION.md  _typos.toml  docker-compose.yml  hk.pkl  mise.toml  zizmor.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
cors-proxy/: worker.js
rustatio-cli/: Cargo.toml
rustatio-cli/src/: cli.rs  main.rs  runner.rs  session.rs
rustatio-cli/src/json/: output.rs
rustatio-cli/src/tui/: app.rs
rustatio-core/: Cargo.toml
rustatio-core/src/: config.rs  faker.rs  grid.rs  lib.rs  logger.rs  mod.rs  peer_listener.rs  validation.rs
rustatio-core/src/protocol/: bencode.rs  mod.rs  peer.rs  tracker.rs
rustatio-core/src/torrent/: client.rs  info.rs
rustatio-desktop/: Cargo.toml  tauri.conf.json
rustatio-desktop/src/: logging.rs  main.rs  persistence.rs  state.rs  state_tests.rs  watch.rs  watch_tests.rs
rustatio-desktop/src/commands/: config.rs  faker.rs  grid.rs  instances.rs  mod.rs  system.rs  watch.rs
rustatio-server/: Cargo.toml
rustatio-server/src/: api.rs  main.rs  persistence.rs  state.rs  static_files.rs  watch.rs
rustatio-server/src/api/: common.rs  middleware.rs  mod.rs
rustatio-server/src/services/: events.rs  gluetun.rs  instance.rs  lifecycle.rs  mod.rs  persistence.rs  scheduler.rs  state.rs  vpn_port_sync.rs  watch.rs
rustatio-server/src/util/: logging.rs  mod.rs  static_files.rs
rustatio-wasm/: Cargo.toml  LICENSE
rustatio-wasm/src/: lib.rs
rustatio-watch/: Cargo.toml
rustatio-watch/src/: engine.rs  lib.rs  paths.rs  scan.rs  types.rs
scripts/: entrypoint.sh
ui/: jsconfig.json  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css
ui/src/components/: AboutDialog.svelte  AuthPage.svelte  ClientIcon.svelte  ConfigurationForm.svelte  DownloadButton.svelte  Header.svelte  InstanceTabs.svelte  Logs.svelte  NetworkStatus.svelte  ProgressBars.svelte  ProxySettings.svelte  RateGraph.svelte  SessionStats.svelte  SettingsDialog.svelte  Sidebar.svelte  StatusBar.svelte  StopConditions.svelte  ThemeIcon.svelte  TotalStats.svelte  UpdateChecker.svelte  VersionSelect.svelte  WatchFolder.svelte
ui/src/lib/: api.js  catppuccin.css  customPreset.js  customPreset.test.js  defaultPreset.js  fakerConfig.js  gridBulkEdit.js  gridBulkEdit.test.js  gridFilterOptions.js  gridFilterOptions.test.js  gridFilters.js  gridMetrics.js  gridStore.js  gridStore.test.js  instanceStore.js  status.js  status.test.js  utils.js  (+9 more)
(+56 files in other folders)
